# sysmon

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  snap-dev.sh  snap-e2e.sh
astro/: Cargo.toml
astro/src/: app.rs  collector.rs  lib.rs  main.rs  theme.rs  ui.rs
audio/: Cargo.toml
audio/src/: app.rs  capture.rs  lib.rs  main.rs  spectrum.rs  ui.rs
cpu/: Cargo.toml
cpu/src/: app.rs  collector.rs  main.rs  ui.rs
dio/: Cargo.toml
dio/src/: app.rs  input.rs  lib.rs  main.rs
dio/src/collector/: device_filter.rs  diskstats.rs  hwinfo.rs  mod.rs
dio/src/model/: device.rs  mod.rs  process.rs  types.rs
dio/src/ui/: animation.rs  device_view.rs  header.rs  help_overlay.rs  mod.rs  process_view.rs  theme.rs
gpu/: Cargo.toml
gpu/src/: app.rs  collector.rs  main.rs  ui.rs
net/: Cargo.toml
net/src/: app.rs  collector.rs  lib.rs  main.rs  rain.rs  ui.rs
poly/: Cargo.toml
poly/src/: app.rs  collector.rs  lib.rs  main.rs  ui.rs
ram/: Cargo.toml
ram/src/: app.rs  collector.rs  main.rs  ui.rs
scripts/: pre-release.sh  safe-update.sh
shared/: Cargo.toml
shared/src/: lib.rs  line_chart.rs  ring_buffer.rs  sticky_max.rs  terminal_theme.rs
snap/: snapcraft.yaml
sysmon/: Cargo.toml
sysmon/src/: layout.rs  main.rs  panel.rs
