[package]
name = "dio"
version = "0.5.0"
edition = "2024"
description = "Disk I/O monitor with real-time terminal charts"
license = "MIT"

[dependencies]
sysmon-shared = { path = "../shared" }
ratatui = "0.30"
crossterm = "0.29"
procfs = "0.18"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["gif"] }

[profile.release]
lto = true
strip = true
