[package]
name = "poly"
version = "0.1.0"
edition = "2024"
description = "Polymarket prediction market TUI dashboard"

[dependencies]
sysmon-shared = { path = "../shared" }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
